src/test/ui/type-alias-impl-trait/field-types.stderr
error[E0308]: mismatched types
  --> $DIR/field-types.rs:16:16
   |
LL | type Foo = impl Debug;
   |            ---------- the expected opaque type
...
LL |     Bar { foo: "foo" }
   |                ^^^^^ expected opaque type, found `&str`
   |
   = note: expected opaque type `impl Debug`
                found reference `&'static str`

error: could not find defining uses
  --> $DIR/field-types.rs:8:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
